--- a/readme
+++ b/readme
@@ -1,19 +1,5 @@
-While working on the Minishell 42 project, students learn several important concepts and skills related to systems programming and operating systems. Some of these include:
-
-    Processes and system calls: Students learn about processes and how to use system calls to create, manage, and manipulate processes.
-
-    Memory management: Students learn about memory allocation and deallocation and how to manage memory efficiently.
-
-    Input/output: Students learn how to handle input and output streams, as well as how to implement basic input/output redirection.
-
-    Signals: Students learn about signals and how to handle them in their shell, including how to catch and respond to signals like Ctrl-C or Ctrl-D.
-
-    Parsing: Students learn about parsing and how to break down user commands into tokens, which can then be executed by the shell.
-
-    Command execution: Students learn how to execute commands entered by the user using system calls like execve.
-
-    Environment variables: Students learn how to handle environment variables and implement basic functionality for setting and getting environment variables.
-
-    Pipes: Students learn about pipes and how to implement basic pipe functionality to enable the user to pipe output from one command to the input of another.
-
-Overall, the Minishell 42 project provides students with valuable experience working with the C programming language, as well as a deeper understanding of how shells and operating systems work.
+<h1>Minishell 42</h1><p>Minishell 42 is a command-line interpreter developed as a project for the 42 school curriculum. It is designed to be a simpler version of the Unix shell, offering basic functionality for executing commands and managing processes.</p><h2>Getting Started</h2><p>To use Minishell 42, you will need to have a Unix-based operating system, such as macOS or Linux. You can clone the project repository from GitHub using the following command:</p><pre><div class="bg-black rounded-md mb-4"><div class="flex items-center relative text-gray-200 bg-gray-800 px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span>bash</span><button class="flex ml-auto gap-2"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect></svg>Copy code</button></div><div class="p-4 overflow-y-auto"><code class="!whitespace-pre hljs language-bash">git <span class="hljs-built_in">clone</span> https://github.com/&lt;username&gt;/minishell-42.git
+</code></div></div></pre><p>Once you have cloned the repository, you can build the executable using the Makefile provided:</p><pre><div class="bg-black rounded-md mb-4"><div class="flex items-center relative text-gray-200 bg-gray-800 px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span>go</span><button class="flex ml-auto gap-2"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect></svg>Copy code</button></div><div class="p-4 overflow-y-auto"><code class="!whitespace-pre hljs language-go"><span class="hljs-built_in">make</span>
+</code></div></div></pre><p>This will compile the source code and create the <code>minishell</code> executable in the root directory of the project.</p><h2>Usage</h2><p>To start the Minishell 42 interpreter, simply run the <code>minishell</code> executable:</p><pre><div class="bg-black rounded-md mb-4"><div class="flex items-center relative text-gray-200 bg-gray-800 px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span>bash</span><button class="flex ml-auto gap-2"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect></svg>Copy code</button></div><div class="p-4 overflow-y-auto"><code class="!whitespace-pre hljs language-bash">./minishell
+</code></div></div></pre><p>This will display the command prompt, where you can enter commands to execute. For example:</p><pre><div class="bg-black rounded-md mb-4"><div class="flex items-center relative text-gray-200 bg-gray-800 px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span>shell</span><button class="flex ml-auto gap-2"><svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect></svg>Copy code</button></div><div class="p-4 overflow-y-auto"><code class="!whitespace-pre hljs language-shell"><span class="hljs-meta prompt_">$ </span><span class="bash"><span class="hljs-built_in">ls</span></span>
+</code></div></div></pre><p>This will execute the <code>ls</code> command, which will list the files and directories in the current directory.</p><p>Minishell 42 also provides several built-in commands, which are implemented in the Minishell source code. These include:</p><ul><li><code>cd</code>: change the current directory</li><li><code>echo</code>: display text on the screen</li><li><code>env</code>: display the environment variables</li><li><code>exit</code>: exit the Minishell interpreter</li><li><code>export</code>: set an environment variable</li><li><code>pwd</code>: display the current directory</li><li><code>unset</code>: unset an environment variable</li></ul><p>You can use these commands just like any other command in Minishell 42.</p><h2>Contributing</h2><p>If you would like to contribute to Minishell 42, feel free to submit a pull request. Before doing so, please read the <a href="CONTRIBUTING.md" target="_new">contribution guidelines</a> to ensure that your changes meet the project standards.</p><h2>License</h2><p>Minishell 42 is licensed under the <a href="LICENSE" target="_new">MIT License</a>.</p>
